--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
                 előzenekar JustVidman youtuber lesz, aki szintén életében először koncertezik (illetve DJ-zik). Erről
                 bővebben a fiúk YouTube csatornájukon beszéltek egy bejelentő <a
                     href="https://www.youtube.com/watch?v=YeSK-VCvgts"target="_blank">videóban</a>
+                <p>Ezen a weblapon összefoglalom az <i><u>eseményeket</u></i>, a koncert kialakulását, a <b>botrányokat</b> és a mostani helyzetet is és megemlítek pár <u>tippet</u> a jegyvásárláshoz, ha esetleg el szeretnél menni megnézni őket ahogy fellépnek.</p>
             </p>
         </article>
         <aside>
             <p>
                 <a href="https://www.facebook.com/events/1450343512854167/" target="_blank"><img src="asd.png"
-                        width="300px" height="500px"></a>
+                        width="300px" height="400px"></a>
             </p>
         </aside>
     </section>
